[package]
name = "vega"
version = "0.2.0"
edition = "2024"
default-run = "scout"

[[bin]]
name = "vega"
path = "src/main.rs"

[[bin]]
name = "scout"
path = "src/bin/scout.rs"

[dependencies]
objc2 = "0.6.1"
rdev = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
